--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,18 @@
     outline: none;
     border-radius: 30px;
 }
+.submit-btn1{
+    width: 85%;
+    padding: 10px 30px;
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    background: linear-gradient(to right,#ff105f,#ffad06);
+    border: 0;
+    outline: none;
+    border-radius: 30px;
+}
+
 .check{
     margin: 30px 10px 30px 0;
 }
